syntax = "proto3";

package models.proto;

// custom type used to store `std::ops::Range`
message Range {
    uint64 start = 1;
    uint64 end = 2;
}

message Entity {
    string text = 1;
}

message Meteors {
    // this will always be `Some`
    Settings settings = 1;
    // this will always be `Some`
    Index index = 2;
}

message Settings {
    enum Theme {
        LIGHT = 0;
        DARK = 1;
    }
    // the theme of the website (default `LIGHT`)
    // this will always be `Some`
    Theme theme = 2;

    // this instances sync key
    string sync_key = 3;
    message Node {
        // the name of an instance, used to allow the user to identify which node is what
        string name = 1;
        // the key of an instance, this is used for verifiaction
        string key = 2;
        // the port of an instance, used for port scanning to find said instance
        uint32 port = 3;
    }
    // other instances that this instance will try to sync with
    repeated Node nodes = 4;
}

message Index {
    map<string, Story> stories = 1;
    map<string, Entity> categories = 2;
    map<string, Entity> authors = 3;
    map<string, Entity> origins = 4;
    map<string, Entity> warnings = 5;
    map<string, Entity> pairings = 6;
    map<string, Entity> characters = 7;
    map<string, Entity> generals = 8;
}

message Story {
    string file_name = 1;
    uint64 file_hash = 2;

    message Info {
        string title = 1;
        string summary = 2;
    }
    // this will always be `Some`
    Info info = 3;

    message Meta {
        enum Rating {
            EXPLICIT = 0;
            MATURE = 1;
            TEEN = 2;
            GENERAL = 3;
            NOT_RATED = 4;
            UNKNOWN = 5;
        }
        Rating rating = 1;

        repeated string authors = 2;
        repeated string categories = 3;
        repeated string origins = 4;
        repeated string warnings = 5;
        repeated string pairings = 6;
        repeated string characters = 7;
        repeated string generals = 8;
    }
    // this will always be `Some`
    Meta meta = 4;

    message Chapter {
        string title = 1;
        // this will always be `Some`
        Range content = 2;
        // this may be `Some`
        optional string summary = 3;
        // this may be `Some`
        Range start_notes = 4;
        // this may be `Some`
        Range end_notes = 5;
    }
    repeated Chapter chapters = 5;
}
